rgbds-0.6.1/test/asm/period.err
error: period.asm(5):
    syntax error, unexpected .
error: Assembly aborted (1 error)!
